# Drone

./: .clang-format  .gitignore  .mxproject  CMakeLists.txt  Drone.ioc  Drone.jdebug  Drone_Ozone.jdebug  README.md  debug.jdebug
Core/Inc/: main.h  stm32f4xx_it.h
Core/Src/: can.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
User/Application/LED/: led_task.c  led_task.h
User/Application/VPC/: vpc.c  vpc.cpp  vpc.hpp
User/Application/autoAiming/: autoAiming.c  autoAiming.h
User/Application/control_switch/: control_switch.c  control_switch.h
User/Application/display/: display.c  display.h
User/Application/gc/: GC_task.cpp  GC_task.hpp
User/Application/gimbal/: gimbal_control.c  gimbal_control.h  gimbal_control_RS05.c  gimbal_control_RS05.cpp  gimbal_control_RS05.h  gimbal_control_RS05.hpp  gimbal_control_pitch.cpp  gimbal_control_pitch.hpp  gimbal_control_yaw.c  gimbal_control_yaw.h
User/Application/shoot/: shoot_control.c  shoot_control.h
User/Application/ui_task/: ui_show.c  ui_show.h
User/BSP/CAN/: bsp_can.c  bsp_can.h
User/BSP/IIC/: bsp_iic.h
User/BSP/SPI/spi_bmi088/: bsp_spi_bmi088.c
User/BSP/UART/: dbus.c  dbus.h
User/BSP/UART/video_transfer/: video_transfer.c  video_transfer.h
User/CAN/: bsp_can.c  bsp_can.h
User/Math/: conversion.c  conversion.h  float_uint_conversion.c  float_uint_conversion.h  limit.h
User/Modules/Algorithm/GC/: GC.cpp  GC.hpp
User/Modules/Algorithm/PID/: pid.h
User/Modules/Math/: conversion.c  conversion.h  limit.c  limit.h
User/Modules/RS05/: RS05.cpp  RS05.h
User/Modules/VPC/: vpc.c
User/Modules/WS2812b/: WS2812b.c  WS2812b.h
User/Modules/bmi088/: bmi088.c  bmi088.h
User/Modules/ist8310/: ist8310.c  ist8310.h
User/Modules/robot_status/: robot_status.c  robot_status.h
User/Modules/ssd1306/: ascii_1208.h  ssd1306.c  ssd1306.h
User/Modules/ui/: dev_referee.c  dev_referee_ui.c  uav_ui.c  uav_ui.h  ui.c  ui.h
User/algorithm/: PID.c  PID.h
User/connectivity/CAN/: bsp_can.c  bsp_can.h
User/connectivity/SPI/spi_bmi088/: spi_bmi088.c  spi_bmi088.h
User/connectivity/VPC/: vpc.h
User/connectivity/iic/: bsp_iic.c  bsp_iic.h
User/device/bmi088/: bmi088.c  bmi088.h  bmi088_register.h
User/device/ist8310/: ist8310.c  ist8310.h
User/device/ssd1306/: asc2_1206.h  ascii_1208.h  ssd1306.c  ssd1306.h
User/task/autoAiming/: autoAiming.c  autoAiming.h
User/task/display/: display.c
User/task/gimbal/: gimbal_control.c  gimbal_control.h  gimbal_control_DM4310.c  gimbal_control_DM4310.h  gimbal_control_dm4310.c  gimbal_control_dm4310.h
User/task/shoot/: shoot_control.c  shoot_control.h
User/uart/: dbus.c
cmake/stm32cubemx/: CMakeLists.txt
